ready to be worked on

--- a/index.html
+++ b/index.html
@@ -25,27 +25,28 @@
       <main class="main">
         <div class="main_overview">
           <div class="overview_card">
-            <div class="overview_card-info">Date temp info</div>
+            <div class="overview_card-info">Date temp info1</div>
             <div class="overview_card-icon ">Card1</div>
           </div>
           <div class="overview_card">
-            <div class="overview_card-info">Overview</div>
+            <div class="overview_card-info">Date temp info2</div>
             <div class="overview_card-icon">Card</div>
           </div>
           <div class="overview_card">
-            <div class="overview_card-info">Overview</div>
+            <div class="overview_card-info">Date temp info3</div>
             <div class="overview_card-icon">Card</div>
           </div>
           <div class="overview_card">
-            <div class="overview_card-info">Overview</div>
+            <div class="overview_card-info">Date temp info4</div>
             <div class="overview_card-icon">Card</div>
           </div>
         </div>
 
         <div class="main_cards">
-          <div class="card">Card</div>
-          <div class="card">Card</div>
-          <div class="card">Card</div>
+          <div class="card">MARS IMAGES</div>
+          <div class="card">WIND DATA</div>
+          <div class="card">GRAPH</div>
+          <div class="card">EARTH IMAGES</div>
         </div>
       </main>
     </div>
