hover image of the day

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
            <!-- <input id="searchTerm" type="text" placeholder="Enter search term"/>-->
           </div>
           <div class="card">GRAPH</div>
-          <div class="card" id="imagecontent">
+          <div class="card project-container project1" id="imagecontent">
+            <div class="image_overlay1">
+              <p class="text1" id="text1"> </p>
+            </div>
             </div>
         </div>
       </main>
