--- a/index.html
+++ b/index.html
@@ -44,10 +44,23 @@
         </div>
 
         <div class="main_cards">
-          <div class="card" id="content">
+          <div class="card cardMarsPic" id="content">
           </div>
-          <div class="card">stuff
-           <!-- <input id="searchTerm" type="text" placeholder="Enter search term"/>-->
+          <div class="card cardNews">
+           <form class="search" action ="">
+             <label for="">News:</label>
+             <input class="input" type="text"/>
+             <input type="submit" />
+           </form>
+
+          <div class="NewsContainter">
+            <ul class="class-list">
+              
+            </ul>
+          </div>
+
+
+
           </div>
           <div class="card">GRAPH</div>
           <div class="card project-container project1" id="imagecontent">
