--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles.css" />
     <script defer src="mars.js"></script>
+    <script defer src="weather.js"></script>
     <title>Building dashboard with gird and flex</title>
   </head>
   <body>
@@ -25,52 +26,33 @@
       </aside>
       <main class="main">
         <div class="main_overview">
-          <div class="overview_card">
-            <div class="overview_card-info">Date temp info1</div>
-            <div class="overview_card-icon ">Card1</div>
-          </div>
-          <div class="overview_card">
-            <div class="overview_card-info">Date temp info2</div>
-            <div class="overview_card-icon">Card</div>
-          </div>
-          <div class="overview_card">
-            <div class="overview_card-info">Date temp info3</div>
-            <div class="overview_card-icon">Card</div>
-          </div>
-          <div class="overview_card">
-            <div class="overview_card-info">Date temp info4</div>
-            <div class="overview_card-icon">Card</div>
-          </div>
+          <div class="overview_card weather_box"></div>
+          <div class="overview_card weather_box"></div>
+          <div class="overview_card weather_box"></div>
+          <div class="overview_card weather_box"></div>
         </div>
 
         <div class="main_cards">
-          <div class="card cardMarsPic" id="content">
-          </div>
+          <div class="card cardMarsPic" id="content"></div>
           <div class="card cardNews">
-           <form class="search" action ="">
-             <label for="">News:</label>
-             <input class="input" type="text"/>
-             <input type="submit" />
-           </form>
+            <form class="search" action="">
+              <label for="">News:</label>
+              <input class="input" type="text" />
+              <input type="submit" />
+            </form>
 
-          <div class="NewsContainter">
-            <ul class="class-list">
-              
-            </ul>
-          </div>
-
-
-
+            <div class="NewsContainter">
+              <ul class="class-list"></ul>
+            </div>
           </div>
           <div class="card">GRAPH</div>
           <div class="card project-container project1" id="imagecontent">
             <div class="image_overlay1">
-              <p class="text1" id="text1"> </p>
+              <p class="text1" id="text1"></p>
             </div>
-            </div>
+          </div>
         </div>
       </main>
     </div>
   </body>
 </html>
-
