finish news search

--- a/index.html
+++ b/index.html
@@ -54,12 +54,9 @@
            </form>
 
           <div class="NewsContainter">
-            <ul class="class-list">
-              
+            <ul class="news-list">
             </ul>
           </div>
-
-
 
           </div>
           <div class="card">GRAPH</div>
