--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles.css" />
-    <style>
-      .pageClass{
-        position:absolute;
-        top:10px;
-        left:200px;
-        color:white;
-      }
-    </style>
     <script defer src="mars.js"></script>
-
+    <script defer src="rover.js"></script>
     <script defer src="weather.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Building dashboard with gird and flex</title>
@@ -72,7 +64,12 @@
           </div>
 
           </div>
-          <div class="card">GRAPH</div>
+          <div class="card">
+            <div id="mars-clock">
+              <p>What's the time on mars?</p>
+              <p class="time"></p>
+            </div>
+          </div>
           <div class="card project-container project1" id="imagecontent">
             <div class="image_overlay1">
               <p class="text1" id="text1"></p>
@@ -81,8 +78,14 @@
         </div>
       </main>
     </div>
-    <div id='PageOne' class='pageClass'><h1>Page One</h1></div>
-    <div id='PageTwo' class='pageClass'><h1>Page Two</h1></div>
-    <div id='PageThree' class='pageClass'><h1>Page Three</h1></div>
+    <div id='PageOne' class='pageClass'>
+      <div class="content"></div>
+    </div>
+    <div id='PageTwo' class='pageClass'>
+      <div class="content"></div>
+    </div>
+    <div id='PageThree' class='pageClass'>
+      <div class="content"></div>
+    </div>
   </body>
 </html>
