--- a/index.html
+++ b/index.html
@@ -56,27 +56,35 @@
         </div>
 
         <div class="main_cards">
-          <div class="card cardMarsPic" id="content"></div>
-          <div class="card cardNews">
-            <form class="search" action="">
-              <label for="">News:</label>
-              <input class="input" type="text" />
-              <input type="submit" />
-            </form>
+          <div class="background_cell">
+            <div class="card cardMarsPic" id="content"></div>
+          </div>
+          <div class="background_cell">
+            <div class="card cardNews">
+              <form class="search" action="">
+                <label for="">News:</label>
+                <input class="input" type="text" />
+                <input type="submit" />
+              </form>
 
-            <div class="NewsContainter">
-              <ul class="news-list"></ul>
+              <div class="NewsContainter">
+                <ul class="news-list"></ul>
+              </div>
             </div>
           </div>
-          <div class="card">
-            <div id="mars-clock">
-              <p>What's the time on mars?</p>
-              <p class="time"></p>
+          <div class="background_cell">
+            <div class="card">
+              <div id="mars-clock">
+                <p>What's the time on mars?</p>
+                <p class="time"></p>
+              </div>
             </div>
           </div>
-          <div class="card project-container project1" id="imagecontent">
-            <div class="image_overlay1">
-              <p class="text1" id="text1"></p>
+          <div class="background_cell">
+            <div class="card project-container project1" id="imagecontent">
+              <div class="image_overlay1">
+                <p class="text1" id="text1"></p>
+              </div>
             </div>
           </div>
         </div>
