--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles.css" />
+    <link rel="stylesheet" href="weather.css" />
     <script defer src="mars.js"></script>
     <script defer src="rover.js"></script>
+    <script defer src="time.js"></script>
     <script defer src="weather.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Building dashboard with gird and flex</title>
@@ -73,12 +75,7 @@
             </div>
           </div>
           <div class="background_cell">
-            <div class="card">
-              <div id="mars-clock">
-                <p>What's the time on mars?</p>
-                <p class="time"></p>
-              </div>
-            </div>
+            <div class="card"></div>
           </div>
           <div class="background_cell">
             <div class="card project-container project1" id="imagecontent">
