weight, still has errors

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles.css" />
     <link rel="stylesheet" href="weather.css" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <script defer src="mars.js"></script>
     <script defer src="rover.js"></script>
     <script defer src="time.js"></script>
@@ -89,6 +90,22 @@
               </div>
             </div>
           </div>
+
+
+          <div class="background_cell">
+            <div class="card project-container project1 weightMars" id="weight">
+                <p class="text1" id="text1"></p>
+                <div id = "calculator">
+                  <label for="masse">weight :</label>
+                  <input type="number" id="masse" name="masse"><span>kg</span>
+                  </div>
+                  <div>
+                  <button id="btn">Calculer</button>
+                  </div>
+                  <p id="result"></p>
+            </div>
+          </div>
+
         </div>
       </main>
     </div>
