fixed weight conversion, general styling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <form class="search" action="">
                 <label for="">News:</label>
                 <input class="input" type="text" />
-                <input type="submit" />
+                <input class="butt" type="submit" />
               </form>
 
               <div class="NewsContainter">
@@ -97,12 +97,18 @@
                 <p class="text1" id="text1"></p>
                 <div id = "calculator">
                   <label for="masse">weight :</label>
-                  <input type="number" id="masse" name="masse"><span>kg</span>
-                  </div>
+                  <input type="number" id="masse" name="masse">
                   <div>
-                  <button id="btn">Calculer</button>
+                  <button id="btnC">Calculate</button>
                   </div>
-                  <p id="result"></p>
+                </div>
+            </div>
+          </div>
+
+          <div class="background_cell">
+            <div class="card project-container project1 weightMars" id="weight">
+              <p>Result in KG: </p>
+                  <div class="wr" id="result"></div>
             </div>
           </div>
 
