background cell added page 1

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </main>
     </div>
     <div id="PageOne" class="pageClass">
-      <div class="content">
+      <div class="content background_cell">
         <div id="viewDiv"></div>
       </div>
     </div>
