rover images, needs styling work

--- a/index.html
+++ b/index.html
@@ -121,7 +121,20 @@
       </div>
     </div>
     <div id="PageTwo" class="pageClass">
-      <div class="content"></div>
+      <div class="content">
+
+
+        <div>
+          <input id="date" type="date">
+          <button id="button" href="">Submit</button>
+      </div>
+  
+      <div id="results">
+      </div>
+  
+      <img src="" id="image" alt="Mars Photo"   style="display: none">
+
+      </div>
     </div>
     <div id="PageThree" class="pageClass">
       <div class="content"></div>
