--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="link" href="javascript:showSection(1)">Surface</a>
             </li>
             <li class="aside_list-item">
-              <a class="link" href="javascript:showSection(2)">Page 2</a>
+              <a class="link" href="javascript:showSection(2)">Photo's</a>
             </li>
             <li class="aside_list-item">
               <a class="link" href="javascript:showSection(3)">Page 3</a>
@@ -121,7 +121,7 @@
       </div>
     </div>
     <div id="PageTwo" class="pageClass">
-      <div class="content">
+      <div class="content background_cell_photos">
 
 
         <div>
@@ -132,9 +132,11 @@
       <div id="results">
       </div>
   
-      <img src="" id="image" alt="Mars Photo"   style="display: none">
+      <img src="" id="image" class="image_photo_results" alt="Mars Photo"  style="display: none" >
 
       </div>
+
+      
     </div>
     <div id="PageThree" class="pageClass">
       <div class="content"></div>
