photo page, waze issues

--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
           </div>
           <div class="background_cell">
             <div class="card cardNews">
-              <form class="search" action="">
-                <label for="">News:</label>
-                <input class="input" type="text" />
-                <input class="butt" type="submit" />
+           <form for="news" class="search" action="">
+                <label for="searchnews">News:
+                <input class="input" type="text" id="searchnews" />
+                <input class="butt" type="submit" value="Search" />
+              </label>
               </form>
 
               <div class="NewsContainter">
