--- a/index.html
+++ b/index.html
@@ -122,22 +122,14 @@
       </div>
     </div>
     <div id="PageTwo" class="pageClass">
-      <div class="content background_cell_photos">
-
-
+      <div class="content background_cell">
         <div>
           <input id="date" type="date">
           <button id="button" href="">Submit</button>
-      </div>
-  
-      <div id="results">
-      </div>
-  
+          <div id="results"></div>
+        </div>
       <img src="" id="image" class="image_photo_results" alt="Mars Photo"  style="display: none" >
-
       </div>
-
-      
     </div>
     <div id="PageThree" class="pageClass">
       <div class="content"></div>
