--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Styles.css" />
     <link rel="stylesheet" href="weather.css" />
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
     <script defer src="mars.js"></script>
     <script defer src="rover.js"></script>
     <script defer src="time.js"></script>
     <script defer src="surface.js"></script>
     <script defer src="weather.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.21/esri/themes/light/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://js.arcgis.com/4.21/esri/themes/light/main.css"
+    />
     <script src="https://js.arcgis.com/4.21/"></script>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>Building dashboard with gird and flex</title>
+    <meta
+      name="viewport"
+      content="initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <title>Mars Today</title>
   </head>
 
   <body onload="pageLoad()">
@@ -69,11 +78,12 @@
           </div>
           <div class="background_cell">
             <div class="card cardNews">
-           <form for="news" class="search" action="">
-                <label for="searchnews">News:
-                <input class="input" type="text" id="searchnews" />
-                <input class="butt" type="submit" value="Search" />
-              </label>
+              <form for="news" class="search" action="">
+                <label for="searchnews"
+                  >News:
+                  <input class="input" type="text" id="searchnews" />
+                  <input class="butt" type="submit" value="Search" />
+                </label>
               </form>
 
               <div class="NewsContainter">
@@ -92,27 +102,25 @@
             </div>
           </div>
 
-
           <div class="background_cell">
             <div class="card project-container project1 weightMars" id="weight">
-                <p class="text1" id="text1"></p>
-                <div id = "calculator">
-                  <label for="masse">weight :</label>
-                  <input type="number" id="masse" name="masse">
-                  <div>
+              <p class="text1" id="text1"></p>
+              <div id="calculator">
+                <label for="masse">weight :</label>
+                <input type="number" id="masse" name="masse" />
+                <div>
                   <button id="btnC">Calculate</button>
-                  </div>
                 </div>
+              </div>
             </div>
           </div>
 
           <div class="background_cell">
             <div class="card project-container project1 weightMars" id="weight">
-              <p>Result in KG: </p>
-                  <div class="wr" id="result"></div>
+              <p>Result in KG:</p>
+              <div class="wr" id="result"></div>
             </div>
           </div>
-
         </div>
       </main>
     </div>
@@ -124,11 +132,17 @@
     <div id="PageTwo" class="pageClass">
       <div class="content background_cell">
         <div>
-          <input id="date" type="date">
+          <input id="date" type="date" />
           <button id="button" href="">Submit</button>
           <div id="results"></div>
         </div>
-      <img src="" id="image" class="image_photo_results" alt="Mars Photo"  style="display: none" >
+        <img
+          src=""
+          id="image"
+          class="image_photo_results"
+          alt="Mars Photo"
+          style="display: none"
+        />
       </div>
     </div>
     <div id="PageThree" class="pageClass">
