Chart is on page and populated with data

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       href="https://js.arcgis.com/4.21/esri/themes/light/main.css"
     />
     <script src="https://js.arcgis.com/4.21/"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -92,7 +93,13 @@
             </div>
           </div>
           <div class="background_cell">
-            <div class="card"></div>
+            <div class="card">
+              <canvas
+                id="line-chart"
+                aria-label="line chart"
+                role="img"
+              ></canvas>
+            </div>
           </div>
           <div class="background_cell">
             <div class="card project-container project1" id="imagecontent">
