--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
           </div>
           <div class="background_cell">
-            <div class="card">
+            <div class="card line-box">
               <canvas
                 id="line-chart"
                 aria-label="line chart"
