--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
               <a class="link" href="javascript:showSection(1)">Surface</a>
             </li>
             <li class="aside_list-item">
-              <a class="link" href="javascript:showSection(2)">Photo's</a>
-            </li>
-            <li class="aside_list-item">
-              <a class="link" href="javascript:showSection(3)">Page 3</a>
+              <a class="link" href="javascript:showSection(2)">Photos</a>
             </li>
           </ul>
         </nav>
@@ -152,8 +149,6 @@
         />
       </div>
     </div>
-    <div id="PageThree" class="pageClass">
-      <div class="content"></div>
     </div>
   </body>
 </html>
